--- a/index.html
+++ b/index.html
@@ -291,6 +291,39 @@
              </div>
         </div>
      </div>
+
+     <div class="6th_part">
+         <div class="container">
+            <div class="d-flex justify-content-center pt-5">
+                <p class="all_p_header">Portfolio</p>
+             </div>
+             <div>
+                 <p class="txt_p text-center" >Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+             </div>
+             <div>
+                 <div class="col-12">
+                     <div class="col-6">
+                         <img style="height: 400px; width: 400px;" src="https://bootstrapmade.com/demo/templates/Bikin/assets/img/portfolio/portfolio-1.jpg"alt="img">
+                     </div>
+                     <div class="col-6 pt-4">
+                        <img style="height: 500px; width: 400px;" src="https://bootstrapmade.com/demo/templates/Bikin/assets/img/portfolio/portfolio-6.jpg"alt="img">
+                     </div>
+                 </div>
+
+                 <div class="row">
+                    <div class="col-6">
+                        <img style="height: 400px; width: 400px;" src="https://bootstrapmade.com/demo/templates/Bikin/assets/img/portfolio/portfolio-2.jpg"alt="img">
+                    </div>
+                    <div class="col-6 pt-4">
+                       <img style="height: 500px; width: 400px;" src="https://bootstrapmade.com/demo/templates/Bikin/assets/img/portfolio/portfolio-5.jpg"alt="img">
+                    </div>
+                    <div class="col-6 pt-4">
+                        <img style="height: 500px; width: 400px;" src="https://bootstrapmade.com/demo/templates/Bikin/assets/img/portfolio/portfolio-9.jpg"alt="img">
+                     </div>
+                </div>
+             </div>
+         </div>
+     </div>
     </div>
 </body>
 
