SRM || 7th_part

--- a/index.html
+++ b/index.html
@@ -324,6 +324,61 @@
              </div>
          </div>
      </div>
+
+     <div class="7th_part" style="background-color: #F6F8FB; margin-top: 40px;">
+         <div class="container">
+            <div class="d-flex justify-content-center pt-5">
+                <p class="all_p_header">Testimonials</p>
+             </div>
+             <div>
+                 <p class="txt_p text-center" >Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+             </div>
+             <div>
+                 <div class="row pt-5">
+                     <div class="col-4">
+                        <div class="card testimonial_card">
+                            <div class="card-body">
+                                <p class="txt_p" style="font-style: italic!important; text-align: center; padding-left: 10px; padding-right: 10px; padding-top: 10px;">
+                                   Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+                                   </p>
+                                   <img class="testimonial_img" src="https://bootstrapmade.com/demo/templates/Bikin/assets/img/testimonials/testimonials-1.jpg" alt="img">
+                                   <h3 class="testmonial_h3 text-center">Saul Goodman</h3>
+                                   <h4 class="testimonial_h4 text-center">Ceo &amp; Founder</h4>
+                            </div>
+                        </div>
+                     </div>
+                     <div class="col-4">
+                        <div class="card testimonial_card">
+                            <div class="card-body">
+                                <p class="txt_p" style="font-style: italic!important; text-align: center; padding-left: 10px; padding-right: 10px; padding-top: 10px;">
+                                   Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+                                   </p>
+                                   <img class="testimonial_img" src="https://bootstrapmade.com/demo/templates/Bikin/assets/img/testimonials/testimonials-2.jpg" alt="img">
+                                   <h3 class="testmonial_h3 text-center">Saul Goodman</h3>
+                                   <h4 class="testimonial_h4 text-center">Ceo &amp; Founder</h4>
+                            </div>
+                        </div>
+                     </div>
+                     <div class="col-4">
+                        <div class="card testimonial_card">
+                            <div class="card-body">
+                                <p class="txt_p" style="font-style: italic!important; text-align: center; padding-left: 10px; padding-right: 10px; padding-top: 10px;">
+                                   Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+                                   </p>
+                                   <img class="testimonial_img" src="https://bootstrapmade.com/demo/templates/Bikin/assets/img/testimonials/testimonials-3.jpg" alt="img">
+                                   <h3 class="testmonial_h3 text-center">Saul Goodman</h3>
+                                   <h4 class="testimonial_h4 text-center">Ceo &amp; Founder</h4>
+                            </div>
+                        </div>
+                     </div>
+                 </div>
+             </div>
+         </div>
+     </div>
+
+     <div class="8th_part">
+         
+     </div>
     </div>
 </body>
 
