--- a/index.html
+++ b/index.html
@@ -675,8 +675,58 @@
                  <p class="txt_p text-center" >Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
              </div>
          </div>
+       
+       <div class="row pt-4">
+           <div class="col-6">
+            <div class="row contact_box">
+                <div class="col-12">
+                    <i class="bx bx-map contact_bx_i"></i>
+                    <h3 class="contact_h3">Our Address</h3>
+                    <p class="contact_p">A108 Adam Street, New York, NY 535022</p>
+                </div>
+            </div>
+            <div class="row pt-4">
+                <div class="col-6 contact_box">
+                    <i class="bx bx-envelope contact_bx_i"></i>
+                    <h3 class="contact_h3">Email Us</h3>
+                    <p class="contact_p">info@example.com</p>
+                    <p class="contact_p">contact@example.com</p>
+                </div>
+                <div class="col-5 contact_box" style="background-color: white; margin-left: 25px;">
+                    <i class="bx bx-phone-call contact_bx_i"></i>
+                    <h3 class="contact_h3">Call Us</h3>
+                    <p class="contact_p">+1 5589 55488 55</p>
+                    <p class="contact_p">+1 6678 254445 41</p>
+                </div>
+            </div>
+           </div>
+           <div class="col-6 pt-5">
+            <div class="row">
+                <div class="col-6">
+                    <input class="form-control heiight" type="text" name="" placeholder="Your Name">
+                </div>
+                <div class="col-6">
+                    <input class="form-control heiight"  type="text" name="" placeholder="Your Email">
+                </div>
+            </div><br>
+            <div class="row">
+                <div class="col-12">
+                    <input class="form-control heiight"  type="text" name="" placeholder="Subject">
+                </div>
+            </div><br>
+            <div class="row">
+                <div class="col-12">
+                    <input style="height: 130px;" class="form-control"  type="text" name="" placeholder="Message">
+                </div>
+            </div>
+            <div class="d-flex justify-content-center align-items-center pt-4">
+                <button class="send_message">Send Message</button>
+            </div>
+        </div>
        </div>
    </div>
+   </div>
+
     </div>
 </body>
 
