SRM | third_part_img

--- a/index.html
+++ b/index.html
@@ -101,22 +101,22 @@
         <div class="container">
             <div class="row">
                 <div class="col-2">
-                    <img class="img-fluid rd_part_img"src="https://bootstrapmade.com/demo/templates/Bikin/assets/img/clients/client-1.png" alt="img">
+                    <img class="img-fluid third_part_img"src="https://bootstrapmade.com/demo/templates/Bikin/assets/img/clients/client-1.png" alt="img">
                 </div>
                 <div class="col-2">
-                    <img class="img-fluid rd_part_img" src="https://bootstrapmade.com/demo/templates/Bikin/assets/img/clients/client-2.png" alt="img">
+                    <img class="img-fluid third_part_img" src="https://bootstrapmade.com/demo/templates/Bikin/assets/img/clients/client-2.png" alt="img">
                 </div>
                 <div class="col-2">
-                    <img class="img-fluid rd_part_img" src="https://bootstrapmade.com/demo/templates/Bikin/assets/img/clients/client-3.png" alt="img">
+                    <img class="img-fluid third_part_img" src="https://bootstrapmade.com/demo/templates/Bikin/assets/img/clients/client-3.png" alt="img">
                 </div>
                 <div class="col-2">
-                    <img class="img-fluid rd_part_img" src="https://bootstrapmade.com/demo/templates/Bikin/assets/img/clients/client-4.png" alt="img">
+                    <img class="img-fluid third_part_img" src="https://bootstrapmade.com/demo/templates/Bikin/assets/img/clients/client-4.png" alt="img">
                 </div>
                 <div class="col-2">
-                    <img class="img-fluid rd_part_img" src="https://bootstrapmade.com/demo/templates/Bikin/assets/img/clients/client-5.png" alt="img">
+                    <img class="img-fluid third_part_img" src="https://bootstrapmade.com/demo/templates/Bikin/assets/img/clients/client-5.png" alt="img">
                 </div>
                 <div class="col-2">
-                    <img class="img-fluid rd_part_img" src="https://bootstrapmade.com/demo/templates/Bikin/assets/img/clients/client-6.png" alt="img">
+                    <img class="img-fluid third_part_img" src="https://bootstrapmade.com/demo/templates/Bikin/assets/img/clients/client-6.png" alt="img">
                 </div>
             </div>
         </div>
