--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
             <div class="navbar-header">
                 <a href="#" class="navbar-brand" style="font-weight:600; font-size:30px; color: #2D405F;">Bikin</a>
             </div>
+            
+            <div>
             <ul class="nav navbar-nav ">
                 <li class="nav-item"><a class="nav-link text-black" href="#">Home</a></li>
                 <li class="nav-item"><a class="nav-link text-black" href="#">About</a></li>
@@ -40,6 +42,7 @@
                 <li class="nav-item"><a class="nav-link text-black" href="#">Drop Down</a></li>
                 <li class="nav-item"><a class="nav-link text-black" href="#">Contact</a></li>
             </ul>
+            </div>
         </div>
     </nav>
     
